--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://markopersonally.github.io/countries-app",
+  "homepage": "https://m4rcin7.github.io/countries_frontendmentor/",
   "name": "countries",
   "version": "0.1.0",
   "private": true,
